update wishlist, login, and this or that view This or That View (Dual Search) THe product image was added to the this or that view.The header buttons' positions are reversed for the Recommendation modal view. Recommendation selection issue related to deselecting a recommendation is resolved. Two items are now visible on each page of the scroll view. This or That view is redesigned with no text descriptions or dividers. The ability to add items to the wishlist from this or that is available. A plus icon is added to the This and That button. The product retailer list view styling and display logic improved.
Login View
The functionality to reset the input field when the button group's buttons are tap is active.

Shares View
Shares view design implemented. Notification prompt present for sending wishlist request. Webservice not connected.

Overall
Touch responsiveness was improved for icons, buttons and other elements. A inner shadow style is applied when a button is pressed.

--- a/src/mobile/www/css/main.css
+++ b/src/mobile/www/css/main.css
@@ -40,7 +40,7 @@
 }
 
 /*#tabstrip a, #addItem-actionsheet a, #search-reset-btn span:active{*/
-#tabstrip a, #addItem-actionsheet a {
+#tabstrip a, #addItem-actionsheet a , #tort-addItem-actionsheet a{
 	color: #16a085 !important; /*Green Sea*/
 }
 
@@ -60,8 +60,8 @@
 }
 
 /*Common style for titles*/
-#wishlist-title {
-	font-size: 1.4em;
+#wishlist-title, #thisorthat-recommendations-modal .km-leftitem a, #thisorthat-products-details-modal .km-leftitem a, .product-name  {
+	font-size: 1.4em !important;
 	font-weight: bold;
 }
 
@@ -87,9 +87,36 @@ pre {
 	margin: 0 !important;	
 }
 
+.emerald {
+	background-color: #2ecc71 !important;
+}
+
 .green {
-	color: white !important;
 	background-color: #16a085 !important;
+}
+
+.river-blue {
+	background-color: #3498db !important;
+}
+
+.alizarin {
+	background-color: #e74c3c !important;
+}
+
+.amethyst {
+	background-color: #9b59b6 !important;
+}
+
+.carrot-orange {
+	background-color: #e67e22 !important;
+}
+
+.sunflower-yellow {
+	background-color: #f1c40f !important;
+}
+
+.emerald, .green, .alizarin, .river-blue, .amethyst, .carrot-orange, .sunflower-yellow {
+	color: white !important;
 }
 
 .hidden {
@@ -104,35 +131,61 @@ pre {
 	color: #007aff !important;
 }
 
+.no-border {
+	border: 0px !important;
+	background-color: transparent !important;
+}
+
 /* ----------- This or That View ----------- */
 #thisorthat-logo {
 	width: 55%;
 }
 
-/*.km-heart-recommendations:before, .km-heart-recommendations:after {
-	content: "\e044";
-}*/
+#tort-or {
+	font-weight: bold !important;
+	font-style: italic !important;
+	width: 12% !important;
+	border: 1px solid black !important;
+	border-top: none !important;
+	border-bottom: none !important;
+	border-radius: 20px !important;
+	background-color: rgba(255, 255, 255,1);
+	position: absolute;
+	left: 44%;
+	top: 0.9em;
+	z-index: 2;
+	font-size: 1.5em;
+}
 
-#recommendations-btn {
+.km-heart-recommendations:before, .km-heart-recommendations:after {
+	content: "\e044";
+}
+
+/*#recommendations-btn {
 	border: 0px !important;
 	font-size: 1.6em;
 	padding: 0px !important;
-	left: 0.5em;
+	right: 0.5em;
 	position: absolute;
 	background-color: transparent !important;
-}
+}*/
 
 .red {
 	color: red !important;
 }
 
-.no-recommendations-message {
+.no-recommendations-message, #request-pending-btn {
 	font-size: 1.2em;
 	font-weight: bold;
 }
 
 #recommendations-btn .km-badge{
-	font-size: 0.5em !important;	
+	font-size: 0.5em !important;
+	top: 0.5em !important;
+	right: -0.5em !important;
+	min-width: 1.5em !important;
+	height: 1.5em !important;
+	line-height: 1.5em !important;
 }
 
 .recommendations a {
@@ -141,7 +194,7 @@ pre {
 }
 
 .tort-product {
-	width: 80%;
+	width: 100%;
 }
 
 #thisorthat-view .km-pages {
@@ -166,15 +219,31 @@ pre {
 	margin-top: 10px;
 }
 
-#thisorthat-button-container .km-button {
-	background-color: #16a085 !important; /*Green Sea*/
-	border-color: #16a085 !important; /*Green Sea*/
-	width: 7.5em;
-  	height: 3em;
+#product-retailers-container {
+	background-color: rgb(244, 244, 244);
+}
+
+.thisorthat-button-container .km-button {
+	border-color: black !important;
+	width: 90% !important;
+	border-radius: 15px !important;
+  	/*height: 3em;*/
+}
+
+.thisorthat-button-container div {
+	opacity: 0.8;
+}
+
+.top-center {
+	position: absolute;
+	right: 45%;
+  	top: 0%;
 }
 
 #thisorthat-view td {
-	color: #16a085;
+	color: black;
+	font-weight: bold;
+	/*border: 1px solid black;*/
 }
 
 .star {
@@ -211,7 +280,7 @@ pre {
 	border: 2px solid #16a085; /*Green Sea*/
 }
 
-.recommendations img {
+.recommendations img, .product-image {
 	width: 60%;
 }
 
@@ -219,6 +288,10 @@ pre {
 	font-style: italic;
 }
 
+
+#product-retailers-listview.km-list>li{
+	padding: .5em .7em !important;
+}
 /* ----------- Login View ----------- */
 /*profile pic holder icon for profile picture*/
 /*Filled in Profile (Contacts) icon*/
@@ -226,7 +299,7 @@ pre {
     content: "\e319";
 }
 
-#profile-pic, #login-close-btn {
+#profile-pic, #login-close-btn, #tort-close-btn, #recommendations-btn {
 	font-size: 1.8em !important;
 	color:white !important; 
 }
@@ -244,17 +317,18 @@ pre {
 
 .description {
 	font-size: 0.9em !important;
+	font-style: italic;
 }
 
 /*Login Buttons with Media Queries*/
 @media screen and (max-width: 360px) {
-	.login-btn {
+	.login-btn, #send-wishlist-request-btn, .logout-btn {
 		font-size: 1.1em !important;
 	}
 }
 
 @media screen and (min-width: 361px) {
-	.login-btn {
+	.login-btn, #send-wishlist-request-btn, .logout-btn {
 		font-size: 1.3em !important;
 	}
 }
@@ -283,7 +357,7 @@ pre {
 	font-size: 1.2em !important;
 }
 
-.login-btn, .logout-btn, .login-email-btngroup {
+.login-btn, .logout-btn, .login-email-btngroup, #send-wishlist-request-btn {
 	width: 80% !important;
 }
 
@@ -326,12 +400,17 @@ input.error-placeholder::-webkit-input-placeholder {
 	width: 16%;
 } 
 
-.item-image, .item-name, .item-description, #myprofile-list-item img {
+.item-image, .item-name, .item-description, #myprofile-list-item img, .retailer-name, .retailer-image {
 	float: left;
 }
+
+.item-name, .retailer-name {
+	font-weight: bold;
+	/*line-height: 1.4em;*/
+}
+
 .item-name {
 	font-size: 0.9em;
-	/*line-height: 1.4em;*/
 	margin: .3em 1em 0 .6em;
 }
 
@@ -340,6 +419,13 @@ input.error-placeholder::-webkit-input-placeholder {
 	/*line-height: 1em;*/
 	width: 53%;
 	margin: 0.4em 0 0 0em;
+}
+
+
+.retailer-name {
+	font-size: 1.1em !important;
+	width: 30% !important;
+	visibility: hidden;
 }
 
 .wishlist-operation { /*No Longer used*/
@@ -370,12 +456,36 @@ li a {
 	width: 35%;
 }
 
+.trending {
+	width: 40% !important;
+  	height: 6rem !important;
+  	border-radius: 0px 20px; /*THe shape of a leaf*/
+  	/*padding-top: 40px;*/
+}
+
+.trending-description {
+	font-size: 1.1em !important;
+	font-weight: bold !important;
+	text-align: left !important;
+}
+
 /* ----------- Wishlist-View ----------- */
-.gallery-image {
+.gallery-image, .retailer-image {
 	width: 30% !important;
+}
+
+.gallery-image, .trending {
 	margin: 4px !important;
 }
 
+/* --------------- SHares View -------------------*/
+
+#shares-wishlist-container, #product-retailers-container {
+	border: 1px solid black;
+	border-left: none;
+	border-right: none;
+	border-bottom: none;
+}
 
 /* ----------- Settings-View ----------- */
 #myprofile-list-item img {
